--- a/03-debugging/devspace.yaml
+++ b/03-debugging/devspace.yaml
@@ -2,20 +2,20 @@ version: v2beta1
 name: simple
 
 vars:
-  IMAGE: simple
+  IMAGE: debugging
   # Specify default namespace
-  DEVSPACE_FLAGS: "-n simple"
+  DEVSPACE_FLAGS: "-n debugging"
 
 # Configuration to build a DevImage
 images:
-  simple:
+  debugging:
     image: ${IMAGE}
     dockerfile: ./Dockerfile
     rebuildStrategy: ignoreContextChanges
 
 # Configuration to deploy the application
 deployments:
-  simple:
+  debugging:
     helm:
       # Use the DevSpace component chart here
       values:
@@ -27,11 +27,13 @@ deployments:
 
 # Configuration to start development
 dev:
-  simple:
+  debugging:
     imageSelector: ${IMAGE}
     # Start port forwarding
     ports:
       - port: 3000:3000
+      # Start port-forwarding for debugging
+      - port: 9229:9229
     # Start file sync
     sync:
       - path: ./:/app
