--- a/03-debugging/package.json
+++ b/03-debugging/package.json
@@ -4,7 +4,7 @@
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon --inspect=0.0.0.0:9229 index.js"
   },
   "dependencies": {
     "express": "^4.18.1",
